--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -288,12 +288,14 @@
   top -1px
   width 7px
   icon('triangle');
+  color $cWhite
   font-size s(5)
 .program-table__thead th.sorting-desc:after
   position: relative
   top -1px
   width 7px
   icon('triangle');
+  color $cWhite
   font-size s(5)
   transform rotate(180deg)
   transform-origin 50% 50%
