--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -173,15 +173,18 @@
     border-radius 500px
     background-color rgba(255,255,255,.0)
     transition .3s ease background-color
+    outline none
     &:last-child
       margin-right: 0
   &__button--active
     background-color $cWhite
     color $cGreen
   &__button:hover
+  &__button:focus
     background-color rgba(255,255,255,.8)
     transition .3s ease background-color
   &__button--active:hover
+  &__button--active:focus
     background-color $cWhite
 
 
@@ -313,11 +316,25 @@
 .program-table__container
   position: relative
 .program-table
-  display none
+  display: none
 
 .option-visible .program-table--option
 .all-visible .program-table--all
   display table
+
+
+.option-visible .program-table--option .link-row
+.all-visible .program-table--all .link-row
+  animation opacity .4s ease
+
+@keyframes opacity{
+  0%{
+    opacity 0
+  }
+  100%{
+    opacity 1
+  }
+}
 
 .link-row
   cursor pointer
