update style for no-js support

--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -339,7 +339,10 @@
 .link-row
   cursor pointer
 
-/*
-.probram-bloc__container
-  height 300px
-*/
+// nojs
+.no-js
+  .program-table
+    display table
+    margin-bottom 100px
+  .link-row
+    cursor auto
