import redirect to program page

--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -1,4 +1,5 @@
 .les-metiers-du-web-programme-des-cours
+  background-color $cBackgroundGrey
   .container
     background-color $cBackgroundGrey
     &:before
@@ -124,7 +125,7 @@
 
 .program-bloc
   &:last-child
-    padding-bottom s(130)
+    padding-bottom 0
   @extend .containerGridz
   &__wrapper
     width col(10,12) + (gutter(12)*2)
