html & style former-students intro

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -64,6 +64,7 @@
 @import "components/web/web_formation.styl"
 //// Global
 @import "components/program.styl"
+@import "components/former-students.styl"
 
 // Trumps
 // --- nothing here (yet)
