--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -43,3 +43,24 @@
   letter-spacing .75px
   font-weight 700
   color $cBlueTitles
+
+.titleDubbleLine
+  & span
+    font-size: s($sz5)
+    color: $cBlueTitles
+    text-transform: uppercase
+  & strong
+    display: block
+    margin-top s(5, $sz4)
+    font-size: s($sz4)
+    font-weight: 700
+    color: $cBlueTitles
+    text-transform: uppercase
+    letter-spacing: 0.5px
+    &:after
+      content ''
+      display: block
+      width s(40, $sz4)
+      height s(5, $sz4)
+      margin s(15, $sz4) 0 s(50, $sz4)
+      background-color $cBorderTitles;
