style for cards students

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -52,6 +52,7 @@
 @import "components/_arrow-circle.styl"
 @import "components/_breadcrumb.styl"
 @import "components/_redirect.styl"
+@import "components/_card-student.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
