--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -5,7 +5,7 @@ html
   background-position center center
   background-size 1240px
   //background #FFF
-  //opacity 0.9
+  opacity 0.9
 
 html *
   box-sizing border-box
