update modernizr and style for flexbox

--- a/ecoleinfographie/resources/assets/stylus/components/former-students.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/former-students.styl
@@ -51,19 +51,19 @@
     margin-bottom s(100)
 
 
+
+
+.no-flexbox
+  .former-students__list
+    display: block
     &:after
       @extend .clearfix
-
-
-
-
-  // no-flexbox
-  /*.former-students__item
+  .former-students__item
     float: left
-    margin-right 10%
+    margin-right 11.7%
     margin-bottom s(100)
     &:nth-child(3n+3)
-      margin-right: 0*/
+      margin-right: 0
 
 
 
