create cards former-students and position

--- a/ecoleinfographie/resources/assets/stylus/components/_card-student.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_card-student.styl
@@ -82,11 +82,11 @@
 .card_student:hover
   & .card_student__picture
     transform scale(1.1)
-    transition .3s $ease-in-out-quart transform
+    transition .3s ease transform
   & .card_student__fake-link__text
     color $cWhite
     transition .3s ease color
   & .card_student__fake-link:after
     height 100%
-    transition .3s $ease-in-out-quart height
+    transition .3s ease height
 
