add social icons to icon-font

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -42,6 +42,15 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "logoweb"   "\e929",
                       "arrow-bottom"    "\e92b",
                       "arrow-bottom-2"  "\e92a",
+                      "behance-circle"  "\e92c",
+                      "portfolio-circle"  "\e92d",
+                      "dribble-circle"  "\e933",
+                      "facebook-circle"  "\e934",
+                      "pinterest-circle"  "\e935",
+                      "twitter-circle"  "\e938",
+                      "vimeo-circle"  "\e939",
+                      "youtube-circle"  "\e93a"
+
 
 
 
