create page structure for former-student-interview

--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -33,7 +33,7 @@ $cBehance = #1769ff
 $cDribble = #ea4c89
 
 $cBlue1 = #004966
-$cBlue2 = #69788C
+$cBlue2 = #69788Cnon
 
 $cGrey1 = #DADADA
 $cGrey2 = #9B9B9B
