--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -49,7 +49,8 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "pinterest-circle"  "\e935",
                       "twitter-circle"  "\e938",
                       "vimeo-circle"  "\e939",
-                      "youtube-circle"  "\e93a"
+                      "youtube-circle"  "\e93a",
+                      "linkedin-circle"  "\e92e"
 
 
 
