add new colors social link

--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -16,6 +16,7 @@ $cSchool = #9B9B9B
 $cBlueGreyLight = #F5F5FA
 $cBackgroundBlueGrey = #F3F3F7
 $cBackgroundGrey = #F7F7F9
+$cBackgroundGrey2 = #F5F5F4
 $cBlueCiel = #136A8A
 $cGreen = #267871
 
@@ -25,13 +26,6 @@ $cText-greyblue = #566273
 $cGreyLight = #F4F4F5
 $cGreyFooter = #E9E9E9
 
-/* Social Colors */
-$cFacebook = #3b5998
-$cTwitter = #55acee
-$cPinterest = #cb2027
-$cBehance = #1769ff
-$cDribble = #ea4c89
-
 $cBlue1 = #004966
 $cBlue2 = #69788Cnon
 
@@ -40,3 +34,16 @@ $cGrey2 = #9B9B9B
 $cGrey3 = #E1E1E1
 
 $cBorderTitles = #4E6177
+
+
+
+/* Social Colors */
+$cFacebook = #3b5998
+$cTwitter = #55acee
+$cPinterest = #cb2027
+$cBehance = #1769ff
+$cDribble = #ea4c89
+$cYoutube = #cd201f
+$cVimeo = #1ab7ea
+$cLinkedin = #0077B5
+$cPortfolio = #E69A20
