--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -53,6 +53,7 @@
 @import "components/_breadcrumb.styl"
 @import "components/_redirect.styl"
 @import "components/_card-student.styl"
+@import "components/_social-list-circle.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
