create style for card former-student-interview

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -67,6 +67,7 @@
 //// Global
 @import "components/program.styl"
 @import "components/former-students.styl"
+@import "components/former_students_interview.styl"
 
 // Trumps
 // --- nothing here (yet)
