--- a/ecoleinfographie/resources/assets/stylus/components/_social-list-circle.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_social-list-circle.styl
@@ -1,7 +1,8 @@
 .social-list-circle
-  @extend .clearfix
-  &__item
-    float: left
+  &:after
+    @extend .clearfix
+  /*&__item
+    float: left*/
   &__link span
     @extend .hidden
   &__link
