--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -165,7 +165,8 @@
 \************************************/
 .header-min
   padding s(35) 0
-  background repeating-linear-gradient(321deg,rgba(0, 4, 40, 0.99) 0%,rgba(0, 49, 105, 0.99) 65.9%,rgb(0, 72, 137) 100%,rgb(0, 78, 146) 100%);
+  //background repeating-linear-gradient(321deg,rgba(0, 4, 40, 0.99) 0%,rgba(0, 49, 105, 0.99) 65.9%,rgb(0, 72, 137) 100%,rgb(0, 78, 146) 100%);
   -webkit-backface-visibility: hidden;
+  background #0B526B
   &__title
     @extend .hidden
