create style for card-course

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -68,6 +68,7 @@
 @import "components/program.styl"
 @import "components/former-students.styl"
 @import "components/former_students_interview.styl"
+@import "components/course-post.styl"
 
 // Trumps
 // --- nothing here (yet)
