--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -64,3 +64,13 @@
       height s(5, $sz4)
       margin s(15, $sz4) 0 s(50, $sz4)
       background-color $cBorderTitles;
+
+.titleOneLine
+  @extend .title4
+  &:after
+    content ''
+    display: block
+    width s(40, $sz4)
+    height s(5, $sz4)
+    margin s(10, $sz4) 0 s(40, $sz4)
+    background-color $cBorderTitles;
