--- a/ecoleinfographie/resources/assets/stylus/components/course-post.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/course-post.styl
@@ -100,8 +100,7 @@
   display: block
   font-size s($sz8)
   margin-bottom s(10, $sz8)
-.test
-  position: relative
+
 .course-card
   &__image-container
     overflow hidden
@@ -113,7 +112,7 @@
     bottom 0
     background url('../img/course-img.jpg') no-repeat center center/cover
 
-.course-card
+/*.course-card
   &__content:before
     content ''
     position: absolute;
@@ -124,7 +123,7 @@
     transform: skewY(-1.5deg) rotate(275deg);
     transform-origin: 50% 50%;
     background-color: $cBlue1
-    z-index: -1;
+    z-index: -1;*/
 
 /************************************\
 		DESCRIPTION DU COURS
