style section course-obj

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -50,7 +50,8 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "twitter-circle"  "\e938",
                       "vimeo-circle"  "\e939",
                       "youtube-circle"  "\e93a",
-                      "linkedin-circle"  "\e92e"
+                      "linkedin-circle"  "\e92e",
+                      "medal"  "\e92f"
 
 
 
