--- a/ecoleinfographie/resources/assets/stylus/components/course-post.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/course-post.styl
@@ -145,3 +145,45 @@
     margin-bottom s(20, $sz7)
     &:last-child
       margin-bottom: 0
+
+
+/************************************\
+		COURSE OBJECTIVES
+\************************************/
+
+.course-obj
+  background $cBlue1
+  margin-top s(-130)
+  padding s(150) s($paddingSideGlobal) s(70)
+  text-align: center
+  & *
+    color $cWhite
+  &__wrapper
+    max-width s(814)
+    margin: 0 auto
+  &__title
+    @extend .title4
+    margin-bottom s(50, $sz4)
+    &:before
+      display: block
+      margin-bottom: s(10, 48)
+      icon('medal')
+      font-size: s(48, $sz4)
+    &:after
+      content ''
+      display: block
+      margin: 15px auto 0 auto
+      width s(33, $sz4)
+      height s(5, $sz4)
+      background $cWhite
+  &__item
+    font-size: s($sz7);
+    line-height 1.3em
+    &:after
+      content ''
+      display block
+      margin s(20) 0
+      height 1px
+      background #5A92A5
+  &__item:last-child:after
+    display: none
