--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -69,6 +69,9 @@
 @import "components/former-students.styl"
 @import "components/former_students_interview.styl"
 @import "components/course-post.styl"
+//// Réalisations
+@import "components/realisations/header-index-realisations.styl"
+@import "components/realisations/index-realisations.styl"
 
 // Trumps
 // --- nothing here (yet)
