--- a/ecoleinfographie/resources/assets/stylus/components/realisations/header-index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/header-index-realisations.styl
@@ -2,6 +2,8 @@
   .header-shawl
     background: #136A8A;
     background: linear-gradient(135deg, rgba(38,120,113,1) 0%, rgba(31,114,122,1) 40%, rgba(25,111,130,1) 58%, rgba(19,106,138,1) 100%);
+  .header__wrapper
+    position relative
 
   .header-rea
     margin-top s(210)
@@ -15,3 +17,56 @@
       @extend .paragraph21
       color $cWhite
       max-width s(630)
+    &__tablet
+      position: absolute
+      top: 280px
+      right: -244px
+      z-index 1
+      transform translateX(100px) translateY(-50px) rotate(-5deg)
+      animation .7s ease rea-tablet forwards
+    &__phone
+      position: absolute
+      top 340px
+      right -30px
+      z-index 2
+      transform translateX(60px) translateY(-30px) rotate(3deg)
+      animation .7s ease rea-phone forwards
+
+.rea-printer-wrapper
+  position relative
+  position: absolute
+  bottom: -170px
+  left: 54%
+  transform: translateY(60px);
+  animation .7s ease rea-printer forwards
+  & .rea-printer__A4-wrapper
+    position: absolute
+    overflow hidden
+    top: -12px
+    left 94px
+    transform: rotate(4.5deg);
+    .header-rea__A4
+      display: block
+      transform translateX(0px) translateY(168px) rotate(-4.5deg)
+      animation 8s linear rea-A4 forwards
+
+@keyframes rea-tablet
+  0%
+    transform translateX(100px) translateY(-50px) rotate(-5deg)
+  100%
+    transform translateX(0) translateY(0) rotate(0)
+@keyframes rea-phone
+  0%
+    transform translateX(40px) translateY(-20px) rotate(3deg)
+  100%
+    transform translateX(0) translateY(0) rotate(0)
+@keyframes rea-A4
+  0%
+  transform translateX(0) translateY(168px) rotate(-4.5deg)
+  100%
+    transform translateX(0) translateY(8px) rotate(-4.5deg)
+@keyframes rea-printer
+  0%
+    transform translateY(60px)
+  100%
+    transform translateY(10px)
