--- a/ecoleinfographie/resources/assets/stylus/components/realisations/header-index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/header-index-realisations.styl
@@ -1,4 +1,5 @@
 .realisations
+  background-color $cBackgroundGrey
   .header-shawl
     background: #136A8A;
     background: linear-gradient(135deg, rgba(38,120,113,1) 0%, rgba(31,114,122,1) 40%, rgba(25,111,130,1) 58%, rgba(19,106,138,1) 100%);
@@ -7,6 +8,10 @@
   .breadcrumb.breadcrumb--header
     top 0
     margin-top s(192)
+  .container
+    background-color $cBackgroundGrey
+    &:before
+      background-color $cBackgroundGrey
 
   .header-rea
     margin-top s(210)
