update link gallery to become button with label

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -58,6 +58,9 @@
 .rSlider li.hasIframe img
   display: none
 
+
+
+
 // Hack lightSlider
 .rSlider__container
   & .lSSlideOuter
@@ -74,6 +77,9 @@
           margin-right 0 !important
       &:after
         @extend .clearfix
+
+.label-gallery
+  @extend .hidden
 
 @keyframes rightEnd {
   0% {
