--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -51,7 +51,8 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "vimeo-circle"  "\e939",
                       "youtube-circle"  "\e93a",
                       "linkedin-circle"  "\e92e",
-                      "medal"  "\e92f"
+                      "medal"  "\e92f",
+                      "play"  "\e930"
 
 
 
