--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -72,6 +72,7 @@
 //// Réalisations
 @import "components/realisations/header-index-realisations.styl"
 @import "components/realisations/index-realisations.styl"
+@import "components/realisations/rSlider.styl"
 @import "components/realisations/post-realisation.styl"
 
 // Trumps
