--- a/ecoleinfographie/resources/assets/stylus/components/realisations/rSlider.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/rSlider.styl
@@ -86,6 +86,20 @@
     transform-origin 50% 50%
     transition .3s $ease-in-out-quad transform
 
+.lSGallery li.with-iframe
+  &:after
+    icon('play');
+    position: absolute
+    left: 0
+    right: 0
+    margin 0 auto
+    top 50%
+    transform translateY(-50%)
+    font-size 2em
+    text-align: center
+    color $cWhite
+
+
 // Hack lightSlider
 .rSlider__container
   & .lSSlideOuter
