create style and position for box "rea-infos"

--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -22,6 +22,7 @@ $cBlueCiel = #136A8A
 $cGreen = #267871
 
 $cGrey-lineMenu = #D5D5D9
+$cGrey-lineMenu2 = #EBEBEB
 $cText-greyblue = #566273
 
 $cGreyLight = #F4F4F5
