--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -9,6 +9,10 @@
   &__container
     @extend .containerGridz
     margin-top s(100)
+  &__wrapper-top
+    position: relative
+    &:after
+      @extend .clearfix
   &__name
     @extend .title51
     text-align: center
@@ -33,3 +37,60 @@
     font-weight 300
     &:after
       bottom -4px
+
+/************************************\
+		INFOS REA
+\************************************/
+.rea-infos
+  position absolute
+  top s(45)
+  right: 0
+  max-width s(420)
+  background $cWhite
+  padding-bottom s(35)
+  box-shadow: 0 0 6px 0 rgba(185,185,185,0.50);
+  &__title
+    margin-bottom s(35, $sz6)
+    padding s(35, $sz6) s(20, $sz6)
+    font-size s($sz6)
+    font-weight 900
+    color $cBlueTitles
+    letter-spacing 3px
+    text-transform: uppercase
+    text-align: center
+    border-bottom 1px solid $cGrey-lineMenu2
+  &__list
+    padding 0 s(35) 0 s(35)
+  &__term
+    margin s(30, $sz10) 0 s(15, $sz10)
+    font-size: s($sz10)
+    font-weight 900
+    color $cBlueTitles
+    letter-spacing 1.3px
+    text-transform: uppercase
+  &__data
+    font-size: s($sz7)
+    margin-bottom s(15, $sz7)
+    &:before
+      content ''
+      display inline-block
+      width: 10px
+      height 3px
+      margin-right s(10, $sz7)
+      background $cGrey-lineMenu
+      vertical-align middle
+
+.rea-share
+  padding 0 s(35) 0 s(35)
+  &__label
+    display: block
+    @extend .rea-infos__term
+    margin s(30, $sz10) 0 s(10, $sz10)
+  & .social-list-circle__item
+    display: inline-block
+    margin-right s(10)
+  & .social-list-circle__link:before
+    font-size 35px
+
+.rea-infos.rea-infos--with-button
+  padding-bottom s(85)
