update icon font PDF + Github

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -52,7 +52,9 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "youtube-circle"  "\e93a",
                       "linkedin-circle"  "\e92e",
                       "medal"  "\e92f",
-                      "play"  "\e930"
+                      "play"  "\e930",
+                      "github-btn"  "\e931",
+                      "pdf-btn"   "\e932"
 
 
 
