--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -74,3 +74,17 @@
     height s(5, $sz4)
     margin s(10, $sz4) 0 s(40, $sz4)
     background-color $cBorderTitles;
+
+.titleExtraBold
+  font-size: s($sz6);
+  font-weight 900
+  letter-spacing 1.63px
+  text-transform: uppercase
+  margin-bottom s(30, $sz6)
+  &:after
+    content ''
+    display: block
+    width s(45, $sz6)
+    height s(5, $sz6)
+    background $cBorderTitles
+    margin-top s(11, $sz6)
