--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -132,27 +132,18 @@
     padding s(60) s(70) s(60) 14%
     & .rea-content__title
       color $cBlueTitles
+  &__title
+    @extend .titleExtraBold
   &__prof
     background $cBlue1
     width col(5,12) + gutter(12)
     padding s(60) s(50)
     & .rea-content__title
       color $cWhite
+      &:after
+        background $cWhite
     & p
       color $cWhite
-  &__title
-    font-size: s($sz6);
-    font-weight 900
-    letter-spacing 1.63px
-    text-transform: uppercase
-    margin-bottom s(30, $sz6)
-    &:after
-      content ''
-      display: block
-      width s(45, $sz6)
-      height s(5, $sz6)
-      background $cBorderTitles
-      margin-top s(11, $sz6)
   &__prof
   &__desc
     & p
@@ -185,3 +176,28 @@
     padding-top s(6, $sz10)
 
 
+/************************************\
+		.rea-others
+\************************************/
+
+.rea-others
+  margin-top s(180)
+  &__title
+    @extend .titleExtraBold
+    color $cBlueTitles
+    margin-bottom s(50, $sz6);
+
+.oneRea
+  .reas
+    .reas__item
+      width 31.048387097% // (385/1240) * 100
+      float: left
+      height 100%
+      margin 0 3.410967742% 0 0 // 48/1240*100
+      &:last-child
+        margin 0 0 0 0
+    .reas__img
+      height 223px
+    .reas__desc__name
+      font-size s($sz5)
+      line-height 1.1em
