create header blog and little anim svg

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -74,6 +74,9 @@
 @import "components/realisations/index-realisations.styl"
 @import "components/realisations/rSlider.styl"
 @import "components/realisations/post-realisation.styl"
+//// Blog
+@import "components/blog/header-blog.styl"
+@import "components/blog/blog-home.styl"
 
 // Trumps
 // --- nothing here (yet)
