--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -29,7 +29,7 @@ $cGreyLight = #F4F4F5
 $cGreyFooter = #E9E9E9
 
 $cBlue1 = #004966
-$cBlue2 = #69788Cnon
+$cBlue2 = #69788C
 
 $cGrey1 = #DADADA
 $cGrey2 = #9B9B9B
