--- a/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
@@ -13,7 +13,7 @@
   & .blog-card
     margin-bottom s(85)
 
-
+// Modernizez no-flexbox
 .no-flexbox
   .blog-list
     &:after
@@ -23,3 +23,93 @@
       margin-right s(85)
       &:nth-child(2n +2 )
         margin-right: 0
+
+/************************************\
+		ASIDE
+\************************************/
+
+.blog-aside
+  &__title
+    @extend .hidden
+// Generic
+
+.box-section-aside
+  width s(354)
+  background $cWhite
+
+.title-section-aside
+  padding s(25) s(30)
+  border-bottom 1px solid $cGrey-lineMenu2
+  color $cBlueTitles
+  font-size $sz8
+  font-weight 900
+  letter-spacing 1.31px
+  text-transform: uppercase
+
+// Search
+.blog-search
+  @extend .box-section-aside
+  &__title
+    @extend .title-section-aside
+  &__container-form
+    padding s(25) s(30)
+  &__form
+    position: relative
+    &:after
+      @extend .clearfix
+  &__label
+    position absolute
+    top 35%
+    padding 0 s(12)
+    display: block
+    transition .3s ease all
+    transition-property top, font-size
+  &__input
+    height 52px
+    width 80%
+    padding 0 s(12)
+    color $cBlack
+    font-weight 600
+    border 1px solid $cWhite2
+    border-right none
+    -webkit-appearance: none;
+  &__submit
+    position: relative
+    display: block
+    float: right
+    height s(52)
+    background-color $cBlueCiel
+    width 20%
+    &:before
+      position: relative
+      icon('glass')
+      color $cWhite
+      z-index 3
+    &:after
+      content ''
+      display inline-block
+      position: absolute
+      top: 0
+      left: 0
+      width 0%
+      height 100%
+      background-color $cBlueCiel + 15%
+      transition .3s ease width
+      z-index 2
+    &:hover:after
+      width 100%
+      transition .3s ease width
+    & span
+      @extend .hidden
+
+// Search effect on click
+.float
+  .blog-search__label
+    top 12%
+    font-size s($sz9)
+    padding 0 s(12, $sz9)
+    transition .3s ease all
+    transition-property top, font-size
+  .blog-search__input
+    padding-top s(12)
+    line-height 0;
